[project]
name = "marathon-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cardcanvas>=0.0.5",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=0.15.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "tables>=3.10.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
